--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eesti Lauatenniseliit</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
     data-secondary-color="#7ac1ff"
     data-button-background-color="#2e4882"
     data-starting-message="Tere tulemast ELTL lehele, kuidas saan teid aidata? Võite minult küsida kõike alates sellest kuidas reitingutabelist aru saada, kuni võistluste korraldamiseni."
-    data-logo="/icons/robot.svg">
+    data-logo="/static/chatbot/icons/default-agent.svg">
   </script>
 </body>
 
