--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     src="https://u4aejokrqhc3whrbgcsjz7qn.agents.do-ai.run/static/chatbot/widget.js"
     data-agent-id="d48b068b-72d8-11f0-b074-4e013e2ddde4"
     data-chatbot-id="4FyV7yGHfAsw_0DSLZ17qdR7R9pxpjQj"
-    data-name="ELTL kõiketeadja"
+      data-name="🏓ELTL kõiketeadja🇪🇪"
     data-primary-color="#4C97F1"
     data-secondary-color="#7ac1ff"
-    data-button-background-color="#2e4882"
+    data-button-background-color="#4C97F1"
     data-starting-message="Tere tulemast ELTL lehele, kuidas saan teid aidata? Võite minult küsida kõike alates sellest kuidas reitingutabelist aru saada, kuni võistluste korraldamiseni."
     data-logo="/static/chatbot/icons/default-agent.svg">
   </script>
